Added markdown commentary

--- a/lesson-2_quantization_techniques/demo-1/demo.ipynb
+++ b/lesson-2_quantization_techniques/demo-1/demo.ipynb
@@ -9,6 +9,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16999039",
+   "metadata": {},
+   "source": [
+    "# Model Quantization Demo: TinyLlama Optimization\n",
+    "\n",
+    "This notebook demonstrates two approaches to model quantization:\n",
+    "1. GPU-based weight-only quantization using Optimum-Quanto\n",
+    "2. CPU-based dynamic quantization using PyTorch\n",
+    "\n",
+    "We'll use the TinyLlama-1.1B-Chat model as our example."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4ec4f653-dc32-46e1-b3a2-6e3c3496f30b",
@@ -48,6 +62,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26def653",
+   "metadata": {},
+   "source": [
+    "# Setup and Dependencies\n",
+    "\n",
+    "This cell:\n",
+    "- Imports required Python libraries for model handling, quantization, and data processing\n",
+    "- Sets up the TinyLlama model configuration\n",
+    "- Configures device settings (GPU if available, otherwise CPU)\n",
+    "- Sets random seed for reproducibility\n",
+    "- Initializes CUDA random seed if GPU is available"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "8f7f7c8a-7645-44b8-9146-e25bdc62fd11",
@@ -61,6 +90,19 @@
     "        for f in files:\n",
     "            total += os.path.getsize(os.path.join(root, f))\n",
     "    return total / (1024**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d0f5623",
+   "metadata": {},
+   "source": [
+    "# Utility Function: Directory Size Calculator\n",
+    "\n",
+    "Defines a helper function `dir_size_mb` that:\n",
+    "- Recursively calculates the total size of a directory\n",
+    "- Converts the size from bytes to megabytes\n",
+    "- Used for measuring model storage requirements before and after quantization"
    ]
   },
   {
@@ -95,6 +137,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e25424a5",
+   "metadata": {},
+   "source": [
+    "# GPU Memory Monitor Context Manager\n",
+    "\n",
+    "Implements a context manager that:\n",
+    "- Tracks GPU memory usage during model operations\n",
+    "- Records peak memory allocation\n",
+    "- Measures memory changes from start to peak\n",
+    "- Handles both GPU and CPU scenarios\n",
+    "- Automatically cleans up memory after monitoring\n",
+    "- Returns results in megabytes for easy comparison"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "09cf124e-9e5d-4f87-8aa3-3a3254f3e3e3",
@@ -106,6 +164,20 @@
     "    latency_s: float\n",
     "    tokens_per_sec: float\n",
     "    peak_gpu_mem_mb: float"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86f6c7d0",
+   "metadata": {},
+   "source": [
+    "# Generation Metrics Data Class\n",
+    "\n",
+    "Defines a dataclass `GenMetrics` to store key performance metrics:\n",
+    "- Latency in seconds\n",
+    "- Generation throughput (tokens per second)\n",
+    "- Peak GPU memory usage in megabytes\n",
+    "This structured format enables consistent reporting across different model configurations."
    ]
   },
   {
@@ -148,6 +220,25 @@
     "        tokens_per_sec=sum(tps)/len(tps),\n",
     "        peak_gpu_mem_mb=getattr(torch_cuda_monitor, \"peak_mb\", 0.0),\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "288e711e",
+   "metadata": {},
+   "source": [
+    "# Text Generation Performance Measurement\n",
+    "\n",
+    "Implements a comprehensive function to measure model generation performance:\n",
+    "- Takes a model, tokenizer, and prompt as input\n",
+    "- Performs multiple generation runs for reliable measurements\n",
+    "- Includes warmup run to eliminate cold-start effects\n",
+    "- Measures:\n",
+    "  - Generation latency\n",
+    "  - Token throughput\n",
+    "  - Peak GPU memory usage\n",
+    "- Handles both CPU and GPU scenarios\n",
+    "- Uses inference mode for optimal performance"
    ]
   },
   {
@@ -201,6 +292,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70d92382",
+   "metadata": {},
+   "source": [
+    "# Perplexity Calculation Function\n",
+    "\n",
+    "Implements a self-contained perplexity evaluation:\n",
+    "- Uses a predefined evaluation text about quantization\n",
+    "- Processes text in fixed-length sequences\n",
+    "- Calculates token-level negative log likelihood\n",
+    "- Computes perplexity as exp(average NLL)\n",
+    "- Enables comparison between FP32 and INT8 models\n",
+    "- Provides quick quality assessment without external datasets\n",
+    "- Uses sliding window approach for efficient computation\n",
+    "- Runs in inference mode for optimal performance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "ed8600e2-772c-4fd3-a35e-10b51d247f4c",
@@ -214,6 +323,22 @@
     "    tokenizer.save_pretrained(out_dir)\n",
     "    model.save_pretrained(out_dir, safe_serialization=True)\n",
     "    return dir_size_mb(out_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf003929",
+   "metadata": {},
+   "source": [
+    "# Model and Tokenizer Save Utility\n",
+    "\n",
+    "Implements a function that:\n",
+    "- Safely saves model and tokenizer to disk\n",
+    "- Cleans up existing directory if present\n",
+    "- Creates new directory for saved files\n",
+    "- Uses safe serialization for model weights\n",
+    "- Returns total size of saved files in MB\n",
+    "This helps track model size changes after quantization."
    ]
   },
   {
@@ -231,6 +356,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5979f72",
+   "metadata": {},
+   "source": [
+    "# Metric Reporting Function\n",
+    "\n",
+    "Defines a formatted print function that displays:\n",
+    "- Model variant title\n",
+    "- Model size in MB\n",
+    "- Generation latency in seconds\n",
+    "- Generation throughput in tokens/second\n",
+    "- Peak VRAM usage in MB\n",
+    "- Perplexity score\n",
+    "Enables consistent comparison between different model configurations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "eb783181-a538-4435-b5d9-bd4a7020a092",
@@ -242,6 +384,20 @@
     "# Some chat models have no pad token; make generation/perplexity robust:\n",
     "if tokenizer.pad_token_id is None:\n",
     "    tokenizer.pad_token_id = tokenizer.eos_token_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b414446f",
+   "metadata": {},
+   "source": [
+    "# Tokenizer Initialization\n",
+    "\n",
+    "Sets up the tokenizer for text processing:\n",
+    "- Loads the TinyLlama tokenizer with fast tokenization\n",
+    "- Ensures pad token is properly configured\n",
+    "- Falls back to EOS token as pad token if needed\n",
+    "This configuration is shared between baseline and quantized models."
    ]
   },
   {
@@ -282,6 +438,24 @@
     "\n",
     "print_row(\"FP32 (baseline)\", baseline_size_mb, baseline_gen.latency_s, baseline_gen.tokens_per_sec,\n",
     "          baseline_gen.peak_gpu_mem_mb, baseline_ppl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80f09563",
+   "metadata": {},
+   "source": [
+    "# Baseline FP32 Model Evaluation\n",
+    "\n",
+    "Loads and evaluates the full-precision (FP32) model:\n",
+    "- Initializes model with 32-bit floating point precision\n",
+    "- Moves model to specified device (GPU/CPU)\n",
+    "- Measures:\n",
+    "  - Model size on disk\n",
+    "  - Generation performance (latency & throughput)\n",
+    "  - Memory usage\n",
+    "  - Perplexity score\n",
+    "This establishes the baseline for comparing quantized versions."
    ]
   },
   {
@@ -331,6 +505,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9017813",
+   "metadata": {},
+   "source": [
+    "# Weight-Only INT8 Quantization\n",
+    "\n",
+    "Implements static weight-only quantization using Optimum-Quanto:\n",
+    "- Loads fresh FP32 model\n",
+    "- Applies INT8 quantization to weights only\n",
+    "- Uses static quantization (no calibration needed)\n",
+    "- Freezes quantization parameters\n",
+    "- Evaluates quantized model performance:\n",
+    "  - Size reduction\n",
+    "  - Generation speed\n",
+    "  - Memory usage\n",
+    "  - Impact on perplexity\n",
+    "Demonstrates the benefits of weight-only quantization."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "bcd0af01-42ac-42f6-a745-69f5669f918b",
@@ -373,6 +567,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68e1543b",
+   "metadata": {},
+   "source": [
+    "# Results Summary and Export\n",
+    "\n",
+    "Creates and saves a comprehensive JSON summary containing:\n",
+    "- Test environment details (device, model, seed)\n",
+    "- Baseline FP32 metrics:\n",
+    "  - Model size\n",
+    "  - Latency\n",
+    "  - Throughput\n",
+    "  - Memory usage\n",
+    "  - Perplexity\n",
+    "- INT8 quantized metrics\n",
+    "  - All corresponding measurements\n",
+    "Enables easy analysis and comparison of results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4c945bd5-a1be-44c3-a869-73bd852985c7",
@@ -391,6 +605,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88873421",
+   "metadata": {},
+   "source": [
+    "# CPU-Based Dynamic Quantization Demo\n",
+    "\n",
+    "This section demonstrates PyTorch's dynamic quantization approach:\n",
+    "- Focuses on CPU-only execution\n",
+    "- Uses dynamic quantization (weights static, activations dynamic)\n",
+    "- Compares performance with FP32 baseline\n",
+    "- Showcases CPU-specific optimization techniques"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "72e5aca4-569f-4749-bac1-ee30703eae2d",
@@ -401,6 +629,20 @@
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "from torch.ao.quantization import quantize_dynamic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2496fdf4",
+   "metadata": {},
+   "source": [
+    "# Import Dependencies for CPU Quantization\n",
+    "\n",
+    "Sets up required libraries for dynamic quantization:\n",
+    "- PyTorch core modules\n",
+    "- Transformers for model handling\n",
+    "- Quantization utilities from torch.ao.quantization\n",
+    "Focuses on CPU-specific implementations."
    ]
   },
   {
@@ -421,6 +663,24 @@
     "\n",
     "torch.set_grad_enabled(False)\n",
     "torch.set_num_threads(max(1, os.cpu_count() or 1))  # let PyTorch use available cores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0994d28",
+   "metadata": {},
+   "source": [
+    "# Configuration Setup\n",
+    "\n",
+    "Establishes test parameters and environment:\n",
+    "- Selects model (TinyLlama or fallback option)\n",
+    "- Forces CPU device usage\n",
+    "- Sets generation parameters\n",
+    "- Configures test runs count\n",
+    "- Defines evaluation prompt\n",
+    "- Disables gradient computation\n",
+    "- Optimizes PyTorch thread count for CPU\n",
+    "These settings ensure consistent and optimized CPU testing."
    ]
   },
   {
@@ -454,6 +714,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34bdd159",
+   "metadata": {},
+   "source": [
+    "# Performance Measurement Function\n",
+    "\n",
+    "Implements a streamlined function for CPU performance testing:\n",
+    "- Takes model, tokenizer, and generation parameters\n",
+    "- Handles padding for consistent input processing\n",
+    "- Includes warmup run to prime the system\n",
+    "- Measures multiple runs for reliable statistics\n",
+    "- Calculates:\n",
+    "  - Average generation latency\n",
+    "  - Token generation throughput\n",
+    "Perfect for comparing FP32 vs INT8 performance on CPU."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "95fafbda-0c09-4064-b6d7-2728690d787c",
@@ -466,6 +744,21 @@
     "tok = AutoTokenizer.from_pretrained(MODEL_ID, use_fast=True)\n",
     "if tok.pad_token_id is None:\n",
     "    tok.pad_token_id = tok.eos_token_id\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76c96b8f",
+   "metadata": {},
+   "source": [
+    "# Tokenizer Setup for CPU Testing\n",
+    "\n",
+    "Initializes the tokenizer with CPU-specific configurations:\n",
+    "- Loads the model's tokenizer\n",
+    "- Enables fast tokenization\n",
+    "- Ensures proper padding token setup\n",
+    "- Uses EOS token as fallback pad token if needed\n",
+    "Prepares for consistent text processing across model variants."
    ]
   },
   {
@@ -496,6 +789,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e16812e3",
+   "metadata": {},
+   "source": [
+    "# FP32 Baseline Model on CPU\n",
+    "\n",
+    "Loads and evaluates the baseline full-precision model:\n",
+    "- Initializes model in FP32 precision\n",
+    "- Moves model to CPU and sets evaluation mode\n",
+    "- Enables attention caching for faster generation\n",
+    "- Measures and prints:\n",
+    "  - Generation latency\n",
+    "  - Token throughput\n",
+    "Establishes baseline CPU performance metrics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "8b3c98f8-c8e7-43be-bb4f-e6149602ffe2",
@@ -513,6 +823,22 @@
     ").eval()\n",
     "# (Optional) free original object to reduce memory\n",
     "del model_fp32\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f85684a3",
+   "metadata": {},
+   "source": [
+    "# Dynamic INT8 Quantization for CPU\n",
+    "\n",
+    "Implements PyTorch's dynamic quantization:\n",
+    "- Targets Linear layers for quantization\n",
+    "- Converts weights to INT8 format\n",
+    "- Uses dynamic quantization for activations\n",
+    "- Keeps other layers in FP32\n",
+    "- Cleans up original model to free memory\n",
+    "This approach is specifically optimized for CPU inference."
    ]
   },
   {
@@ -543,6 +869,23 @@
     "print(\"\\n== Summary ==\")\n",
     "print(f\"CPU FP32 latency: {lat_fp32:.3f}s | CPU INT8 latency: {lat_int8:.3f}s | Speedup: {speedup:.2f}x\")\n",
     "print(f\"CPU FP32 tput:   {tps_fp32:.2f} tok/s | CPU INT8 tput:   {tps_int8:.2f} tok/s\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb3234fe",
+   "metadata": {},
+   "source": [
+    "# Performance Comparison and Results\n",
+    "\n",
+    "Evaluates and compares model variants:\n",
+    "- Measures INT8 model performance\n",
+    "- Calculates speedup factor over FP32\n",
+    "- Compares:\n",
+    "  - Generation latency\n",
+    "  - Token throughput\n",
+    "  - Relative performance gains\n",
+    "Provides clear metrics for quantization benefits on CPU."
    ]
   },
   {
