Updated trainer and added markdown

--- a/lesson-2_quantization_techniques/demo-2/demo.ipynb
+++ b/lesson-2_quantization_techniques/demo-2/demo.ipynb
@@ -44,6 +44,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6bd3cb91",
+   "metadata": {},
+   "source": [
+    "# Quantization-Aware Training with Intel Neural Compressor\n",
+    "\n",
+    "This notebook demonstrates how to implement Quantization-Aware Training (QAT) using Intel's Neural Compressor framework.\n",
+    "\n",
+    "## Required Dependencies\n",
+    "Setting up essential libraries for:\n",
+    "- Core Python utilities: os, time, math, shutil\n",
+    "- Deep Learning: PyTorch\n",
+    "- Numerical operations: NumPy\n",
+    "- Model & Data handling: \n",
+    "  - Hugging Face Transformers\n",
+    "  - Datasets library\n",
+    "  - Evaluation metrics\n",
+    "- Intel optimization tools:\n",
+    "  - Neural Compressor\n",
+    "  - Optimum Intel integration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "afdb9262-9057-474c-a135-fcf214fd5ba7",
@@ -68,6 +91,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6484b07d",
+   "metadata": {},
+   "source": [
+    "# Global Configuration Settings\n",
+    "\n",
+    "Defines essential parameters for the QAT experiment:\n",
+    "\n",
+    "1. Model Configuration:\n",
+    "   - Uses TinyLlama-1.1B-Chat model\n",
+    "   - Chosen for balance of size and capability\n",
+    "\n",
+    "2. Test Data:\n",
+    "   - PROMPT: Complex text about sustainable energy\n",
+    "     * Tests model's ability to handle technical content\n",
+    "     * Evaluates coherence in generation\n",
+    "   \n",
+    "   - PERP_TEXT: Definition of AI\n",
+    "     * Used for perplexity calculation\n",
+    "     * Tests model's language understanding\n",
+    "\n",
+    "3. Generation Parameters:\n",
+    "   - MAX_NEW_TOKENS: Controls generation length\n",
+    "   - OUTPUT_DIR: Directory for saving quantized model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "6c3d52ef-d54d-416f-9ac9-68088d41f182",
@@ -87,6 +137,32 @@
     "    model.config.pad_token_id = tokenizer.pad_token_id\n",
     "\n",
     "    return model, tokenizer\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cf0be25",
+   "metadata": {},
+   "source": [
+    "# Model and Tokenizer Initialization\n",
+    "\n",
+    "Defines a function that sets up the model and tokenizer with proper configurations:\n",
+    "\n",
+    "1. Model Loading:\n",
+    "   - Initializes CausalLM architecture\n",
+    "   - Enables gradient checkpointing for memory efficiency\n",
+    "   - Optimizes for training large models\n",
+    "\n",
+    "2. Tokenizer Setup:\n",
+    "   - Uses fast tokenizer implementation\n",
+    "   - Configures padding strategy:\n",
+    "     * Sets EOS token as padding token\n",
+    "     * Updates model config to recognize padding\n",
+    "   \n",
+    "3. Memory Management:\n",
+    "   - Implements memory-efficient loading\n",
+    "   - Ensures proper token handling\n",
+    "   - Maintains model-tokenizer alignment"
    ]
   },
   {
@@ -125,8 +201,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3b93a4d",
+   "metadata": {},
+   "source": [
+    "# Dataset Preparation for QAT\n",
+    "\n",
+    "Implements dataset processing pipeline for training and evaluation:\n",
+    "\n",
+    "1. Data Loading:\n",
+    "   - Sources Wikitext-2 dataset\n",
+    "   - Handles raw text format\n",
+    "   - Manages download and caching\n",
+    "\n",
+    "2. Text Processing:\n",
+    "   - Implements efficient tokenization:\n",
+    "     * Applies truncation for consistent length\n",
+    "     * Uses max-length padding\n",
+    "     * Creates aligned input/label pairs\n",
+    "   - Processes in batches for efficiency\n",
+    "\n",
+    "3. Dataset Management:\n",
+    "   - Creates training subset (default: 1000 examples)\n",
+    "   - Prepares evaluation set (default: 500 examples)\n",
+    "   - Maintains data consistency\n",
+    "\n",
+    "4. Performance Considerations:\n",
+    "   - Uses batched processing for speed\n",
+    "   - Removes unnecessary columns\n",
+    "   - Optimizes memory usage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "080245c8-386e-43c1-b949-fa2c6879d276",
    "metadata": {},
    "outputs": [],
@@ -141,9 +249,9 @@
     "        fp16=True,\n",
     "        optim=\"adamw_bnb_8bit\",\n",
     "        evaluation_strategy=\"no\",\n",
-    "        save_strategy=\"epoch\",\n",
-    "        logging_steps=50,              # optional: adjust as you like\n",
-    "        save_total_limit=1,            # keep only the latest checkpoint\n",
+    "        save_strategy=\"no\", \n",
+    "        logging_steps=50,\n",
+    "        save_total_limit=1,\n",
     "    )\n",
     "\n",
     "    # 2) Instantiate the INCTrainer\n",
@@ -156,7 +264,37 @@
     "        data_collator=default_data_collator,\n",
     "    )\n",
     "\n",
-    "    return trainer\n"
+    "    return trainer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67b4a409",
+   "metadata": {},
+   "source": [
+    "# Intel Neural Compressor Trainer Setup\n",
+    "\n",
+    "Creates a specialized trainer for Quantization-Aware Training:\n",
+    "\n",
+    "1. Training Configuration:\n",
+    "   - Sets up HuggingFace TrainingArguments:\n",
+    "     * Single epoch training\n",
+    "     * Small batch size (1) with gradient accumulation (4 steps)\n",
+    "     * Mixed precision (FP16) for efficiency\n",
+    "     * 8-bit Adam optimizer for memory savings\n",
+    "     * Periodic logging (every 50 steps)\n",
+    "     * Checkpoint management (keeps latest only)\n",
+    "\n",
+    "2. QAT Trainer Initialization:\n",
+    "   - Integrates quantization configuration\n",
+    "   - Sets up training dataset\n",
+    "   - Configures data collation\n",
+    "   - Maintains tokenizer alignment\n",
+    "\n",
+    "3. Optimization Features:\n",
+    "   - Uses Intel's optimized training\n",
+    "   - Implements efficient memory usage\n",
+    "   - Enables proper quantization tracking"
    ]
   },
   {
@@ -194,6 +332,38 @@
     "        # 6) Return perplexity\n",
     "        return {\"eval_perplexity\": torch.exp(loss).item()}\n",
     "    return compute_ppl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6498606",
+   "metadata": {},
+   "source": [
+    "# Perplexity Calculation Function Generator\n",
+    "\n",
+    "Creates a closure-based metrics computation function:\n",
+    "\n",
+    "1. Prediction Processing:\n",
+    "   - Handles complex tensor operations:\n",
+    "     * Unpacks logits and labels\n",
+    "     * Applies sequence shifting for next-token prediction\n",
+    "     * Manages tensor reshaping and flattening\n",
+    "   \n",
+    "2. Perplexity Computation:\n",
+    "   - Implements sophisticated calculation:\n",
+    "     * Converts arrays to PyTorch tensors\n",
+    "     * Uses CrossEntropyLoss with padding handling\n",
+    "     * Computes exponential of loss\n",
+    "   \n",
+    "3. Technical Features:\n",
+    "   - Handles padding tokens properly\n",
+    "   - Maintains numerical stability\n",
+    "   - Returns HuggingFace-compatible metrics\n",
+    "\n",
+    "4. Memory Efficiency:\n",
+    "   - Uses efficient tensor operations\n",
+    "   - Minimizes memory overhead\n",
+    "   - Properly manages GPU/CPU transitions"
    ]
   },
   {
@@ -236,6 +406,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65058de0",
+   "metadata": {},
+   "source": [
+    "# QAT Training and Evaluation Pipeline\n",
+    "\n",
+    "Implements comprehensive training and evaluation workflow:\n",
+    "\n",
+    "1. Training Phase:\n",
+    "   - Executes QAT training process\n",
+    "   - Manages model updates and quantization\n",
+    "\n",
+    "2. Evaluation Preparation:\n",
+    "   - Creates manageable evaluation subset\n",
+    "   - Initializes perplexity calculator\n",
+    "   - Sets up evaluation environment\n",
+    "\n",
+    "3. Evaluation Configuration:\n",
+    "   - Configures evaluation parameters:\n",
+    "     * Small batch size for accuracy\n",
+    "     * FP16 precision for efficiency\n",
+    "     * Proper logging intervals\n",
+    "     * Metric computation setup\n",
+    "\n",
+    "4. Execution:\n",
+    "   - Runs evaluation pipeline\n",
+    "   - Collects performance metrics\n",
+    "   - Returns comprehensive results\n",
+    "\n",
+    "5. Memory Management:\n",
+    "   - Efficient dataset handling\n",
+    "   - Proper resource cleanup\n",
+    "   - Optimized evaluation process"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "c43f6335-f9fd-48c8-870d-df9a6da99969",
@@ -250,6 +456,34 @@
     "    loaded_model = INCModelForCausalLM.from_pretrained(output_dir)\n",
     "\n",
     "    return loaded_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32f09855",
+   "metadata": {},
+   "source": [
+    "# Model Persistence Functions\n",
+    "\n",
+    "Handles saving and loading of quantized models:\n",
+    "\n",
+    "1. Model Saving:\n",
+    "   - Uses specialized trainer save method\n",
+    "   - Preserves quantization parameters\n",
+    "   - Maintains architecture integrity\n",
+    "   - Ensures proper weight storage\n",
+    "\n",
+    "2. Model Loading:\n",
+    "   - Loads as INCModelForCausalLM\n",
+    "   - Restores quantization settings\n",
+    "   - Maintains Intel optimizations\n",
+    "   - Verifies model integrity\n",
+    "\n",
+    "3. Features:\n",
+    "   - Proper format handling\n",
+    "   - Quantization preservation\n",
+    "   - Efficient storage/loading\n",
+    "   - Version compatibility"
    ]
   },
   {
@@ -289,6 +523,36 @@
     "    peak_mem_mib = torch.cuda.max_memory_allocated(device) / 1024**2\n",
     "    perplexity = math.exp(out.loss.item())\n",
     "    return peak_mem_mib, perplexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ebd1b36",
+   "metadata": {},
+   "source": [
+    "# Performance Measurement Functions\n",
+    "\n",
+    "Implements comprehensive performance metrics collection:\n",
+    "\n",
+    "1. Latency and Throughput Measurement:\n",
+    "   - Handles input preparation\n",
+    "   - Includes warm-up generation\n",
+    "   - Measures generation time\n",
+    "   - Calculates tokens per second\n",
+    "   - Manages GPU synchronization\n",
+    "   \n",
+    "2. Memory and Perplexity Analysis:\n",
+    "   - Tracks peak GPU memory usage\n",
+    "   - Calculates model perplexity\n",
+    "   - Handles device-specific operations\n",
+    "   - Provides memory usage in MB\n",
+    "   \n",
+    "3. Features:\n",
+    "   - Accurate timing mechanisms\n",
+    "   - Proper GPU synchronization\n",
+    "   - Memory usage tracking\n",
+    "   - Comprehensive metrics collection\n",
+    "   - Cross-device compatibility"
    ]
   },
   {
@@ -333,6 +597,40 @@
     "    print(f\"Throughput           : {throughput:.1f} tokens/sec\")\n",
     "    if peak_mem is not None:\n",
     "        print(f\"Peak GPU memory      : {peak_mem:.1f} MB\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f340caa",
+   "metadata": {},
+   "source": [
+    "# Main Execution Function\n",
+    "\n",
+    "Orchestrates the complete QAT workflow:\n",
+    "\n",
+    "1. Initialization (Steps 1-2):\n",
+    "   - Loads model and tokenizer\n",
+    "   - Prepares training/evaluation datasets\n",
+    "   \n",
+    "2. QAT Setup and Training (Steps 3-4):\n",
+    "   - Configures quantization parameters\n",
+    "   - Creates and runs QAT trainer\n",
+    "   - Evaluates model performance\n",
+    "   - Reports perplexity metrics\n",
+    "\n",
+    "3. Model Management (Step 5):\n",
+    "   - Saves quantized model\n",
+    "   - Loads for inference\n",
+    "   - Moves to appropriate device\n",
+    "\n",
+    "4. Performance Analysis (Step 6):\n",
+    "   - Measures generation metrics:\n",
+    "     * Latency\n",
+    "     * Throughput\n",
+    "     * Memory usage\n",
+    "     * Model size\n",
+    "   - Calculates perplexity\n",
+    "   - Reports comprehensive statistics"
    ]
   },
   {
@@ -446,6 +744,22 @@
    ],
    "source": [
     "start()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "158f1867",
+   "metadata": {},
+   "source": [
+    "# Execute QAT Pipeline\n",
+    "\n",
+    "Initiates the complete Quantization-Aware Training process:\n",
+    "- Runs all steps from model loading to evaluation\n",
+    "- Executes training and quantization\n",
+    "- Generates performance metrics\n",
+    "- Displays comprehensive results\n",
+    "\n",
+    "This cell starts the actual execution of our QAT experiment."
    ]
   },
   {
